[gd_scene load_steps=7 format=2]

[ext_resource path="res://pentagon_levels/filip/assets/models/shoot_level_pentagon.dae" type="PackedScene" id=1]
[ext_resource path="res://pentagon_levels/filip/prefabs/OmniLight.gd" type="Script" id=2]
[ext_resource path="res://pentagon_levels/filip/prefabs/shoot_spot_light.gd" type="Script" id=3]

[sub_resource type="SpatialMaterial" id=1]

render_priority = 0
flags_transparent = false
flags_unshaded = false
flags_vertex_lighting = false
flags_no_depth_test = false
flags_use_point_size = false
flags_world_triplanar = false
flags_fixed_size = false
flags_albedo_tex_force_srgb = false
vertex_color_use_as_albedo = false
vertex_color_is_srgb = false
params_diffuse_mode = 1
params_specular_mode = 0
params_blend_mode = 0
params_cull_mode = 2
params_depth_draw_mode = 0
params_line_width = 1.0
params_point_size = 1.0
params_billboard_mode = 0
params_grow = false
params_use_alpha_scissor = false
albedo_color = Color( 0.429688, 0.429688, 0.429688, 1 )
metallic = 0.4
metallic_specular = 0.5
metallic_texture_channel = 0
roughness = 0.0
roughness_texture_channel = 0
emission_enabled = false
normal_enabled = false
rim_enabled = true
rim = 1.0
rim_tint = 0.5
clearcoat_enabled = false
anisotropy_enabled = false
ao_enabled = false
depth_enabled = false
subsurf_scatter_enabled = false
transmission_enabled = false
refraction_enabled = false
detail_enabled = false
uv1_scale = Vector3( 1, 1, 1 )
uv1_offset = Vector3( 0, 0, 0 )
uv1_triplanar = false
uv1_triplanar_sharpness = 1.0
uv2_scale = Vector3( 1, 1, 1 )
uv2_offset = Vector3( 0, 0, 0 )
uv2_triplanar = false
uv2_triplanar_sharpness = 1.0
proximity_fade_enable = false
distance_fade_enable = false
_sections_unfolded = [ "Flags", "Parameters", "Rim" ]

[sub_resource type="BoxShape" id=3]

extents = Vector3( 1, 1, 1 )

[sub_resource type="BoxShape" id=4]

extents = Vector3( 1, 1, 1 )

[node name="shoot_level_pentagon" instance=ExtResource( 1 )]

[node name="mid_light" type="OmniLight" parent="." index="0"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.37033, 0 )
layers = 1
light_color = Color( 1, 1, 1, 1 )
light_energy = 16.0
light_indirect_energy = 1.0
light_negative = false
light_specular = 0.5
light_bake_mode = 1
light_cull_mask = -1
shadow_enabled = false
shadow_color = Color( 0, 0, 0, 1 )
shadow_bias = 0.15
shadow_contact = 0.0
shadow_reverse_cull_face = false
editor_only = false
omni_range = 8.0
omni_attenuation = 1.93188
omni_shadow_mode = 1
omni_shadow_detail = 1
script = ExtResource( 2 )
_sections_unfolded = [ "Light", "Omni" ]

[node name="Cylinder" parent="." index="1"]

material/0 = SubResource( 1 )
_sections_unfolded = [ "Geometry", "material" ]

[node name="StaticBody" type="StaticBody" parent="Cylinder" index="0"]

input_ray_pickable = true
input_capture_on_drag = false
collision_layer = 1
collision_mask = 1
friction = 1.0
bounce = 0.0
constant_linear_velocity = Vector3( 0, 0, 0 )
constant_angular_velocity = Vector3( 0, 0, 0 )

[node name="CollisionShape2" type="CollisionShape" parent="Cylinder/StaticBody" index="0"]

transform = Transform( 15, 0, 0, 0, 15, 0, 0, 0, 15, 0, -14.6866, 0 )
shape = SubResource( 3 )
disabled = false
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape" type="CollisionShape" parent="Cylinder/StaticBody" index="1"]

transform = Transform( 3.79428, 0, 0, 0, 5.63666, 0, 0, 0, 0.327438, -6.36342, 2.79662, 12.654 )
shape = SubResource( 4 )
disabled = false

[node name="CollisionShape3" type="CollisionShape" parent="Cylinder/StaticBody" index="2"]

transform = Transform( 3.79428, 0, 0, 0, 5.63666, 0, 0, 0, 0.327438, 6.00418, 2.79662, 12.654 )
shape = SubResource( 4 )
disabled = false

[node name="CollisionShape4" type="CollisionShape" parent="Cylinder/StaticBody" index="3"]

transform = Transform( 0.99188, 0, 0.316052, 0, 5.63666, 0, -3.66234, 0, 0.0855971, 10.3152, 2.79662, 8.99174 )
shape = SubResource( 4 )
disabled = false

[node name="CollisionShape5" type="CollisionShape" parent="Cylinder/StaticBody" index="4"]

transform = Transform( 0.99188, 0, 0.316052, 0, 5.63666, 0, -3.66234, 0, 0.0855971, 13.803, 2.79662, -2.32391 )
shape = SubResource( 4 )
disabled = false

[node name="CollisionShape8" type="CollisionShape" parent="Cylinder/StaticBody" index="5"]

transform = Transform( 3.09485, 0, 0.189433, 0, 5.63666, 0, -2.19511, 0, 0.267078, -11.9527, 2.79662, -6.9696 )
shape = SubResource( 4 )
disabled = false

[node name="CollisionShape10" type="CollisionShape" parent="Cylinder/StaticBody" index="6"]

transform = Transform( -1.11191, 0, 0.313063, 0, 5.63666, 0, -3.6277, 0, -0.0959558, -13.8658, 2.79662, -1.64282 )
shape = SubResource( 4 )
disabled = false

[node name="CollisionShape11" type="CollisionShape" parent="Cylinder/StaticBody" index="7"]

transform = Transform( -1.11191, 0, 0.313063, 0, 5.63666, 0, -3.6277, 0, -0.0959558, -10.3078, 2.79662, 9.43383 )
shape = SubResource( 4 )
disabled = false

[node name="CollisionShape9" type="CollisionShape" parent="Cylinder/StaticBody" index="8"]

transform = Transform( 3.09485, 0, 0.189433, 0, 5.63666, 0, -2.19511, 0, 0.267078, -2.42664, 2.79662, -13.691 )
shape = SubResource( 4 )
disabled = false

[node name="CollisionShape6" type="CollisionShape" parent="Cylinder/StaticBody" index="9"]

transform = Transform( -3.03506, 0, 0.196506, 0, 5.63666, 0, -2.27706, 0, -0.261919, 2.21691, 2.79662, -13.7806 )
shape = SubResource( 4 )
disabled = false

[node name="CollisionShape7" type="CollisionShape" parent="Cylinder/StaticBody" index="10"]

transform = Transform( -3.03506, 0, 0.196506, 0, 5.63666, 0, -2.27706, 0, -0.261919, 11.7945, 2.79662, -7.28183 )
shape = SubResource( 4 )
disabled = false

[node name="lights" type="Spatial" parent="." index="3"]

visible = false
script = ExtResource( 3 )

[node name="SpotLight" type="SpotLight" parent="lights" index="0"]

transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 10.2566, 10.4742, 3.82717 )
layers = 1
light_color = Color( 1, 0.46875, 0, 1 )
light_energy = 16.0
light_indirect_energy = 1.0
light_negative = false
light_specular = 0.5
light_bake_mode = 1
light_cull_mask = -1
shadow_enabled = false
shadow_color = Color( 0, 0, 0, 1 )
shadow_bias = 0.15
shadow_contact = 0.0
shadow_reverse_cull_face = false
editor_only = false
spot_range = 30.0
spot_attenuation = 1.0
spot_angle = 30.0
spot_angle_attenuation = 1.0
_sections_unfolded = [ "Light", "Spot", "Transform" ]

[node name="SpotLight2" type="SpotLight" parent="lights" index="1"]

transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -11.8556, 10.4742, 3.82717 )
layers = 1
light_color = Color( 1, 0.46875, 0, 1 )
light_energy = 16.0
light_indirect_energy = 1.0
light_negative = false
light_specular = 0.5
light_bake_mode = 1
light_cull_mask = -1
shadow_enabled = false
shadow_color = Color( 0, 0, 0, 1 )
shadow_bias = 0.15
shadow_contact = 0.0
shadow_reverse_cull_face = false
editor_only = false
spot_range = 30.0
spot_attenuation = 1.0
spot_angle = 30.0
spot_angle_attenuation = 1.0
_sections_unfolded = [ "Light", "Spot", "Transform" ]

[node name="SpotLight3" type="SpotLight" parent="lights" index="2"]

transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -0.271077, 10.4742, 11.7974 )
layers = 1
light_color = Color( 1, 0.46875, 0, 1 )
light_energy = 16.0
light_indirect_energy = 1.0
light_negative = false
light_specular = 0.5
light_bake_mode = 1
light_cull_mask = -1
shadow_enabled = false
shadow_color = Color( 0, 0, 0, 1 )
shadow_bias = 0.15
shadow_contact = 0.0
shadow_reverse_cull_face = false
editor_only = false
spot_range = 30.0
spot_attenuation = 1.0
spot_angle = 30.0
spot_angle_attenuation = 1.0
_sections_unfolded = [ "Light", "Spot", "Transform" ]

[node name="SpotLight4" type="SpotLight" parent="lights" index="3"]

transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 5.90736, 10.4742, -8.99734 )
layers = 1
light_color = Color( 1, 0.46875, 0, 1 )
light_energy = 16.0
light_indirect_energy = 1.0
light_negative = false
light_specular = 0.5
light_bake_mode = 1
light_cull_mask = -1
shadow_enabled = false
shadow_color = Color( 0, 0, 0, 1 )
shadow_bias = 0.15
shadow_contact = 0.0
shadow_reverse_cull_face = false
editor_only = false
spot_range = 30.0
spot_attenuation = 1.0
spot_angle = 30.0
spot_angle_attenuation = 1.0
_sections_unfolded = [ "Light", "Spot", "Transform" ]

[node name="SpotLight5" type="SpotLight" parent="lights" index="4"]

transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -7.01686, 10.4742, -8.99734 )
layers = 1
light_color = Color( 1, 0.46875, 0, 1 )
light_energy = 16.0
light_indirect_energy = 1.0
light_negative = false
light_specular = 0.5
light_bake_mode = 1
light_cull_mask = -1
shadow_enabled = false
shadow_color = Color( 0, 0, 0, 1 )
shadow_bias = 0.15
shadow_contact = 0.0
shadow_reverse_cull_face = false
editor_only = false
spot_range = 30.0
spot_attenuation = 1.0
spot_angle = 30.0
spot_angle_attenuation = 1.0
_sections_unfolded = [ "Editor" ]


